--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -300,7 +300,7 @@ header a#main-category-toggler-close {
 	padding-left: 0px;
 	width: 30px;
 	left: 5px;
-	background-image: url(../img/search-icon.png);
+	background-image: url(../images/search-icon.png);
 	height: 30px;
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -611,7 +611,7 @@ header ul.dropdown-menu-help-cnter .search-form input[type="submit"] {
 	padding-left: 0px;
 	width: 30px;
 	left: 5px;
-	background-image: url(../img/search-icon.png);
+	background-image: url(../images/search-icon.png);
 	height: 30px;
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -1544,7 +1544,7 @@ h1.new-video-title .fa {
 	top: 0px;
 	z-index: -1;
 	background-attachment: fixed;
-	background-image: url(../demo_img/sing-up-ba.jpg);
+	background-image: url(../images/sing-up-ba.jpg);
 	opacity: 0.2;
 }
 
@@ -1562,7 +1562,7 @@ h1.new-video-title .fa {
 	top: 0px;
 	z-index: -1;
 	background-attachment: fixed;
-	background-image: url(../demo_img/log-in-ba.jpg);
+	background-image: url(../images/log-in-ba.jpg);
 	opacity: 0.2;
 }
 
@@ -2009,7 +2009,7 @@ h1.new-video-title .fa {
 
 .widget h3.widget-title:before {
 	content: " ";
-	background-image: url(../img/right_sticky.png);
+	background-image: url(../images/right_sticky.png);
 	width: 50px;
 	top: -12px;
 	left: 10px;
@@ -2738,7 +2738,7 @@ h1.new-video-title .fa {
 	border-radius: 0px;
 	width: 35px;
 	left: 5px;
-	background-image: url(../img/search-icon-2.png);
+	background-image: url(../images/search-icon-2.png);
 	height: 35px;
 	background-color: #fab318;
 	padding: 0px;
@@ -2752,7 +2752,7 @@ h1.new-video-title .fa {
 	padding-top: 150px;
 	padding-bottom: 150px;
 	background-attachment: fixed;
-	background-image: url(../demo_img/main.jpg);
+	background-image: url(../images/main.jpg);
 }
 
 #main-page .main-header h1 {
